<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_menu">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/brand_spacing_m"
        app:icon="@drawable/ic_back"
        app:iconTint="@color/brand_on_surface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/brand_spacing_xxl"
        android:fontFamily="sans-serif-black"
        android:text="@string/setup_bot_title"
        android:textColor="@color/brand_primary"
        android:textSize="@dimen/brand_text_h2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.ChessApp.Card.Glass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/brand_spacing_l"
        app:layout_constraintTop_toBottomOf="@id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/brand_spacing_l">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPlayerName"
                style="@style/Widget.ChessApp.Input.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/brand_spacing_m"
                android:hint="@string/label_player_name"
                app:startIconDrawable="@drawable/ic_pvp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPlayerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/brand_on_surface" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutDifficulty"
                style="@style/Widget.ChessApp.Input.Dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/brand_spacing_l"
                android:hint="@string/label_difficulty"
                app:startIconDrawable="@drawable/ic_pvb">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/spinnerDifficulty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textColor="@color/brand_on_surface" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStartGame"
                style="@style/Widget.ChessApp.Button.Main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_start" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
